[package]
name = "discord_music"
version = "0.1.0"
authors = ["pokefreak627 <pokefreak627@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { features = ["macros", "rt-multi-thread", "sync"], version = "1" }
twilight-gateway = "0.6"
twilight-http = "0.6"
twilight-model = "0.6"
twilight-standby = "0.6"

[dependencies.songbird]
default-features = false
version = "0.2.0"
features = ["driver", "twilight-rustls", "zlib-stock"]